# OFootBlock

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
data/: OFootBlock.esp
data/Scripts/: OFootBlock.pex
data/Scripts/Source/: OFootBlock.psc
src/: Hook.cpp  Hook.h  Main.cpp  Papyrus.cpp  Papyrus.h
src/Events/: CellWatcher.cpp  CellWatcher.h  EquipEventSink.cpp  EquipEventSink.h  InputChordDetector.cpp  InputChordDetector.h  InputEventSink.cpp  InputEventSink.h  OFootBlockEventListener.cpp  OFootBlockEventListener.h
src/Utils/: ActorUtils.cpp  ActorUtils.h  BoneUtils.cpp  BoneUtils.h
